# media_renamer

./: .git-blame-ignore-revs  .gitignore  Pipfile  README.md  app.py  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package-windows.yml
media_renamer/: __init__.py  app.py  gui.py  mediarenamergui.py  renamer.py
media_renamer/constants/: android.py  files.py
media_renamer/frames/: __init__.py  mainframe.py  settingsframe.py
media_renamer/logic/: android.py  renamer.py  time.py
test/: conftest.py  test_renamer.py
