[tool.poetry]
name = "media-renamer"
version = "0.2.0"
description = "Easily rename photos and videos according to the creation date"
authors = ["Tim Walter <tim@twwd.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hachoir = "^3.3.0"
exifread = "^3.0.0"
rawpy = "^0.24.0"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
media_renamer = 'media_renamer.app:run'

[tool.poetry-pyinstaller-plugin]

[tool.poetry-pyinstaller-plugin.scripts]
media_renamer = { source = "media_renamer/app.py", console = false, windowed = true }

[tool.ruff]
include = ["media_renamer/**/*.py",
    "test/**/*.py"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90", "N", "RUF", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
