[project]
name = "media-renamer"
version = "0.2.0"
description = "Easily rename photos and videos according to the creation date"
authors = [
    {name = "Tim Walter", email = "tim@twwd.de"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hachoir>=3.3.0",
    "exifread>=3.0.0",
    "rawpy>=0.25.1",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
media_renamer = 'media_renamer.app:run'

[dependency-groups]
dev = ["ruff>=0.4.2", "pytest>=8.3.4"]


[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = ">=1.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry-pyinstaller-plugin]

[tool.poetry-pyinstaller-plugin.scripts]
media_renamer = { source = "media_renamer/app.py", console = false, windowed = true }


[tool.ruff]
include = ["media_renamer/**/*.py",
    "test/**/*.py"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90", "N", "RUF", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
